--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,8 @@
 <body>
 	
 	//= tmpl/banner.html
+
+	//= tmpl/summary.html
 	
 	<script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
 	<script src="js/bundle.js"></script>
