--- a/src/tmpl/header.html
+++ b/src/tmpl/header.html
@@ -1,10 +1,10 @@
 <header class="header">
     <header class="header__wrapper wrapper">
-        <div class="header__logo"><a href=""><img width="146px" src="img/logo-head.png" alt=""></a></div>
-        <div class="header__spacer">
+        <div data-aos="fade-down" class="header__logo"><a href=""><img width="146px" src="img/logo-head.png" alt=""></a></div>
+        <div data-aos="fade-down" data-aos-delay="200" class="header__spacer">
             <a href="#" class="spacer__text">хочу шедевр</a>
         </div>
-        <div class="header__links">
+        <div data-aos="fade-down" data-aos-delay="400" class="header__links">
             <div class="header__shower-btn">             
 				<svg width="429px" height="232px" viewBox="0 0 429 232" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
 				    <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
