--- a/src/tmpl/summary.html
+++ b/src/tmpl/summary.html
@@ -28,14 +28,16 @@
 		</div>
 
 		<div class="to-bottom-arrows">
-			<svg width="38px" height="48px" viewBox="0 0 103 129" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
-			    <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
-			        <g id="arrows" transform="translate(51.500000, 64.500000) rotate(-270.000000) translate(-51.500000, -64.500000) translate(-13.000000, 13.000000)" fill-rule="nonzero">
-			            <polygon id="Shape" fill="#FABB00" points="67.28 38.15 34.71 0 0 0 46.28 51.25 1.98 102.85 35.28 102.85 66.28 65.48 78.97 51.42"></polygon>
-			            <polygon id="Shape" fill="#3A3A3A" points="117.11 38.15 84.54 0 49.83 0 96.11 51.25 51.8 102.85 85.11 102.85 116.11 65.48 128.8 51.42"></polygon>
-			        </g>
-			    </g>
-			</svg>
+			<a href="#">
+				<svg width="38px" height="48px" viewBox="0 0 103 129" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+				    <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+				        <g id="arrows" transform="translate(51.500000, 64.500000) rotate(-270.000000) translate(-51.500000, -64.500000) translate(-13.000000, 13.000000)" fill-rule="nonzero">
+				            <polygon id="Shape" fill="#FABB00" points="67.28 38.15 34.71 0 0 0 46.28 51.25 1.98 102.85 35.28 102.85 66.28 65.48 78.97 51.42"></polygon>
+				            <polygon id="Shape" fill="#3A3A3A" points="117.11 38.15 84.54 0 49.83 0 96.11 51.25 51.8 102.85 85.11 102.85 116.11 65.48 128.8 51.42"></polygon>
+				        </g>
+				    </g>
+				</svg>
+			</a>
 		</div>
 	</div>
 
