--- a/src/index.html
+++ b/src/index.html
@@ -14,9 +14,19 @@
 
 	//= tmpl/summary.html
 
-	//= tmpl/video.html
 
-	//= tmpl/project.html
+	<section class="--gray-gradient">
+		//= tmpl/video.html
+
+		//= tmpl/project.html
+	</section>
+
+
+	//= tmpl/form.html
+
+
+	//= tmpl/footer.html
+
 	
 	<script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
 	<script src="js/bundle.js"></script>
