--- a/src/tmpl/project.html
+++ b/src/tmpl/project.html
@@ -1,7 +1,7 @@
 <section class="project">
 	<div class="wrapper project__container">
 		<div class="project__title">анатомия вашей компании</div>
-		<div class="project__body">
+		<!-- <div class="project__body">
 			<div class="project__body-row">
 				<div class="body-row__title">
 					<div class="subtitle">то, что запоминается</div>
@@ -55,7 +55,9 @@
 					<li class="description__item">контекстная реклама</li>
 				</ul>
 			</div>
-		</div>
+		</div> -->
+
+		//= sculpture-img.html
 
 	</div>
 
