--- a/src/tmpl/banner.html
+++ b/src/tmpl/banner.html
@@ -13,4 +13,18 @@
 	 		<div class="head-img"></div>
 	 	</div>
 	 </div>
+	 <div class="banner__mob-contnent wrapper banner__toform-btn">
+	 	<div class="toform-btn__btn">хочу шедевр</div>
+	 </div>
+	 <div class="banner__mob-contnent banner__mob-description wrapper">
+	 	<p class="banner__mob-text">Когда-то давно Микеланджело
+			<br/>вооружился инструментами
+			<br/>и создал из глыбы мрамора 
+			<br/>произведение искусства — «Давида». 
+			<br/>Скульптор даже пренебрег логикой и 
+			<br/>исказил пропорции человеческого тела,
+			<br/>чтобы достичь большей художественной
+			<br/>выразительности.</p>
+		<div class="headbg--mob-contnent"><img src="../img/head.png" alt=""></div>
+	 </div>
 </section>
