--- a/src/tmpl/banner.html
+++ b/src/tmpl/banner.html
@@ -25,6 +25,6 @@
 			<br/>исказил пропорции человеческого тела,
 			<br/>чтобы достичь большей художественной
 			<br/>выразительности.</p>
-		<div class="headbg--mob-contnent"><img src="../img/head.png" alt=""></div>
+		<div data-aos="fade-left" class="headbg--mob-contnent"><img src="../img/head.png" alt=""></div>
 	 </div>
 </section>
