--- a/src/tmpl/sculpture-img.html
+++ b/src/tmpl/sculpture-img.html
@@ -1,6 +1,6 @@
 <div class="project__body">
 	<?xml version="1.0" encoding="UTF-8"?>
-	<svg width="1265px" height="1570px" viewBox="0 0 1265 1570" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+	<svg class="sculpture" width="1265px" height="1570px" viewBox="0 0 1265 1570" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
 	    <g id="sculpture" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
 
             <g class="sctulpture__block" id="legs" transform="translate(0.000000, 865.000000)">
