--- a/src/tmpl/summary.html
+++ b/src/tmpl/summary.html
@@ -11,7 +11,7 @@
 
 		<div class="wrapper summary__top-title --rubrica">
 			<span class="large">мы</span> как <span class="large filling-line"><i class="line"></i><span>микеланджело</span></span>, 
-			<br>но <span class="large filling-line"><i class="line"></i><span>в digital-сфере</span></span> : 
+			<br>но <span class="large filling-line"><i class="line"></i><span>в digital-сфере</span></span>: 
 			<br>извлекаем шедевр из бесформенной глыбы 
 		</div>
 		<div class="wrapper summary__mid-title">
@@ -19,11 +19,11 @@
 		</div>
 		<div class="wrapper summary__footer-title">
 			<div class="footer-title__container">
-				<div class="footer-title__logo-bg"><img src="img/logo-main.svg" alt=""></div>
-				<header class="footer-title__header --rubrica --italic">мы знаем, как создать <span class="--undeline">продукт</span>,
+				<div data-aos="fade-left" class="footer-title__logo-bg"><img src="img/logo-main.svg" alt=""></div>
+				<header data-aos="fade-right" class="footer-title__header --rubrica --italic">мы знаем, как создать <span class="--undeline">продукт</span>,
 					<br><span class="--undeline">вызывающий</span> целый спектр <span class="--undeline">эмоций</span>.			
 				</header>
-				<footer class="footer-title__footer">Ведь эмоции важнее.</footer>
+				<footer data-aos="fade-right" class="footer-title__footer">Ведь эмоции важнее.</footer>
 			</div>
 		</div>
 
