--- a/src/index.html
+++ b/src/index.html
@@ -9,25 +9,26 @@
 	<title>KnowHow</title>
 </head>
 <body>
-	
-	//= tmpl/banner.html
+	<main class="mode">
+		//= tmpl/banner.html
 
-	//= tmpl/summary.html
-
-
-	<section class="--gray-gradient">
-
-		//= tmpl/video.html
-
-		//= tmpl/project.html
-
-	</section>
+		//= tmpl/summary.html
 
 
-	//= tmpl/form.html
+		<section class="--gray-gradient">
+
+			//= tmpl/video.html
+
+			//= tmpl/project.html
+
+		</section>
 
 
-	//= tmpl/footer.html
+		//= tmpl/form.html
+
+
+		//= tmpl/footer.html
+	</main>
 
 	
 	<script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
