--- a/src/tmpl/header.html
+++ b/src/tmpl/header.html
@@ -1,6 +1,6 @@
 <header class="header">
 	<div class="header__wrapper wrapper">
-		<div data-aos="fade-down" class="header__logo"><img width="146px" src="img/logo-head.png" alt=""></div>
+		<div data-aos="fade-down" class="header__logo"><a href=""><img width="146px" src="img/logo-head.png" alt=""></a></div>
 		<div data-aos="fade-down" data-aos-delay="200" class="header__spacer">
 			<a href="#" class="spacer__text">хочу шедевр</a>
 		</div>
