--- a/src/tmpl/form.html
+++ b/src/tmpl/form.html
@@ -1,4 +1,4 @@
-<section class="forms">
+<section id="forms-block" class="forms">
 	<div class="forms__container wrapper">
 		<h1 class="forms__title --rubrica">начать проект</h1>
 		<h3 class="forms__subtitle">Спасибо за проявленный интерес к нашей работе. 
