--- a/src/tmpl/banner.html
+++ b/src/tmpl/banner.html
@@ -14,7 +14,7 @@
 	 	</div>
 	 </div>
 	 <div class="banner__mob-contnent wrapper banner__toform-btn">
-	 	<div class="toform-btn__btn">хочу шедевр</div>
+	 	<div class="toform-btn__btn"><a href="#forms-block">хочу шедевр</a></div>
 	 </div>
 	 <div class="banner__mob-contnent banner__mob-description wrapper">
 	 	<p class="banner__mob-text">Когда-то давно Микеланджело
