--- a/src/tmpl/summary.html
+++ b/src/tmpl/summary.html
@@ -19,7 +19,9 @@
 		</div>
 		<div class="wrapper summary__footer-title">
 			<div class="footer-title__container">
-				<div data-aos="fade-left" class="footer-title__logo-bg"><img src="img/logo-main.svg" alt=""></div>
+				<div data-aos="fade-left" class="footer-title__logo-bg">
+					<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 431.3 234.78"><g id="Слой_2" data-name="Слой 2"><g id="Слой_1-2" data-name="Слой 1"><path class="cls-1" d="M55.35,156.88v73.85H0V157.91A64.73,64.73,0,0,1,6.29,129.4a72.07,72.07,0,0,1,16.86-22.54,80,80,0,0,1,53.2-20.24H276.12V72.71a12.77,12.77,0,0,0-12.77-12.77H12.88V0h249a70.72,70.72,0,0,1,28.36,5.9A79.61,79.61,0,0,1,331,45.38a65.71,65.71,0,0,1,6.29,28.36v157H275.81V144.11H68.12A12.77,12.77,0,0,0,55.35,156.88Z"/><circle class="cls-2" cx="400.14" cy="203.61" r="31.17"/></g></g></svg>
+				</div>
 				<header data-aos="fade-right" class="footer-title__header --rubrica --italic">мы знаем, как создать <span class="--undeline">продукт</span>,
 					<br><span class="--undeline">вызывающий</span> целый спектр <span class="--undeline">эмоций</span>.			
 				</header>
@@ -27,18 +29,18 @@
 			</div>
 		</div>
 
-		<div class="to-bottom-arrows">
-			<a href="#">
-				<svg width="38px" height="48px" viewBox="0 0 103 129" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
-				    <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
-				        <g id="arrows" transform="translate(51.500000, 64.500000) rotate(-270.000000) translate(-51.500000, -64.500000) translate(-13.000000, 13.000000)" fill-rule="nonzero">
-				            <polygon id="Shape" fill="#FABB00" points="67.28 38.15 34.71 0 0 0 46.28 51.25 1.98 102.85 35.28 102.85 66.28 65.48 78.97 51.42"></polygon>
-				            <polygon id="Shape" fill="#3A3A3A" points="117.11 38.15 84.54 0 49.83 0 96.11 51.25 51.8 102.85 85.11 102.85 116.11 65.48 128.8 51.42"></polygon>
-				        </g>
-				    </g>
-				</svg>
-			</a>
-		</div>
+	</div>
+	<div class="to-bottom-arrows">
+		<a href="#video">
+			<svg width="38px" height="48px" viewBox="0 0 103 129" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+			    <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+			        <g id="arrows" transform="translate(51.500000, 64.500000) rotate(-270.000000) translate(-51.500000, -64.500000) translate(-13.000000, 13.000000)" fill-rule="nonzero">
+			            <polygon id="arrows-top" fill="#FABB00" points="67.28 38.15 34.71 0 0 0 46.28 51.25 1.98 102.85 35.28 102.85 66.28 65.48 78.97 51.42"></polygon>
+			            <polygon id="arrows-bottom" fill="#3A3A3A" points="117.11 38.15 84.54 0 49.83 0 96.11 51.25 51.8 102.85 85.11 102.85 116.11 65.48 128.8 51.42"></polygon>
+			        </g>
+			    </g>
+			</svg>
+		</a>
 	</div>
 
 </section>
