--- a/src/tmpl/banner.html
+++ b/src/tmpl/banner.html
@@ -4,7 +4,7 @@
 	 <div class="banner__wrapper wrapper">
 	 	<div class="banner__title">
 	 		<h1 class="--rubrica-title"><span class="--italic">ПЛЕВАТЬ<br/>НА ЛОГИКУ</span><br/>ШЕДЕВР<br/>СОЗДАЮТ<br/>ЭМОЦИИ <span class="switcher"><img src="img/switcher.png" alt="switcher"></span></h1>
-	 		<h4 class="--avente-subtitle-big">А ЭМОЦИИ СОЗДАЕМ <span class="--primary-color">МЫ</span></h4>
+	 		<h4 class="--avente-subtitle-big">А ЭМОЦИИ СОЗДАЕМ <a href="#summary" class="--primary-color">МЫ</a></h4>
 	 	</div>
 	 	<div class="banner__head">
 	 		<div class="canvas-bg">
@@ -13,10 +13,8 @@
 	 		<div class="head-img"></div>
 	 	</div>
 	 </div>
-	 <div class="banner__mob-contnent wrapper banner__toform-btn">
+	 <div class="banner__mob-content wrapper banner__toform-btn">
 	 	<div class="toform-btn__btn"><a href="#forms-block">хочу шедевр</a></div>
-	 </div>
-	 <div class="banner__mob-contnent banner__mob-description wrapper">
 	 	<p class="banner__mob-text">Когда-то давно Микеланджело
 			<br/>вооружился инструментами
 			<br/>и создал из глыбы мрамора 
@@ -25,6 +23,5 @@
 			<br/>исказил пропорции человеческого тела,
 			<br/>чтобы достичь большей художественной
 			<br/>выразительности.</p>
-		<div data-aos="fade-left" class="headbg--mob-contnent"><img src="../img/head.png" alt=""></div>
 	 </div>
 </section>
