--- a/src/tmpl/summary.html
+++ b/src/tmpl/summary.html
@@ -1,4 +1,4 @@
-<section class="summary">
+<section id="summary" class="summary">
 	<p class="summary__subtitle">Когда-то давно Микеланджело вооружился инструментами
 		<br>и создал из глыбы мрамора произведение искусства — «Давида». 
 		<br>Скульптор даже пренебрег логикой и исказил пропорции человеческого тела,
