--- a/src/tmpl/project.html
+++ b/src/tmpl/project.html
@@ -6,5 +6,8 @@
 
 	</div>
 
-	<footer class="project__footer"><img src="img/wave.png" alt=""></footer>
+	<footer class="project__footer">
+		<img class="--bright-wave" src="img/wave.png" alt="">
+		<img class="--dark-wave" src="img/wave-dark.png" alt="">		
+	</footer>
 </section>
