--- a/_generated/t/w03v0p/index.html
+++ b/_generated/t/w03v0p/index.html
@@ -2,12 +2,14 @@
 <html>
 
 	<head>
-		<title>knowhow</title>
+		<title>TITLE</title>
+
+
+		
 		<link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 		<link rel="stylesheet" href="/assets/css/style.css">
 		<link href="https://fonts.googleapis.com/css?family=Lato:100,200" rel="stylesheet">
 		<style type="text/css"></style>
-
 	</head>
 	<body>
 
@@ -59,10 +61,6 @@
 							</svg>
 						</div>
 						<ul class="links__list">
-							<li class="list__item"><a target="_blank" href="https://www.behance.net/">behance</a></li>
-							<li class="list__item"><a target="_blank" href="https://youtube.com">youtube</a></li>
-							<li class="list__item"><a target="_blank" href="https://instagram.com">instagram</a></li>
-							<li class="list__item"><a target="_blank" href="https://facebook.com">facebook</a></li>
 						</ul>
 					</div>
 				</div>
