--- a/src/tmpl/video.html
+++ b/src/tmpl/video.html
@@ -3,6 +3,9 @@
 		<div class="video-sect__hand">
 			<div class="img__hand"></div>
 			<img src="img/hand/phone.png" alt="phone" class="img__phone">
+			<div class="video-border">
+				<video src="img/knowhow-promo.mp4"></video>
+			</div>
 		</div>
 	</div>
 	<div data-aos="fade-right" class="wrapper video-sect__logo">
