--- a/_generated/index.html
+++ b/_generated/index.html
@@ -3,6 +3,7 @@
 
 	<head>
 		<title>knowhow</title>
+		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 		<link rel="stylesheet" href="/assets/css/style.css">
 		<link href="https://fonts.googleapis.com/css?family=Lato:100,200" rel="stylesheet">
@@ -72,7 +73,7 @@
 			<div class="banner__popup">
 				<button class="close-btn"><img src="assets/img/close-button.svg"></button>
 				<div class="popup__container">
-					<video id="popup-video" autoplay src="assets/img/popup.mp4"></video>
+					<video id="popup-video" autoplay="" src="assets/img/popup.mp4"></video>
 				</div>
 			</div>
 		
