--- a/_generated/index.html
+++ b/_generated/index.html
@@ -73,7 +73,7 @@
 			<div class="banner__popup">
 				<button class="close-btn"><img src="assets/img/close-button.svg"></button>
 				<div class="popup__container">
-					<video id="popup-video" autoplay>
+					<video id="popup-video" mute autoplay>
 						<source type="video/mp4" src="assets/img/popup.mp4"></source>
 					</video>
 				</div>
