--- a/_generated/index.html
+++ b/_generated/index.html
@@ -3,7 +3,9 @@
 
 	<head>
 		<title>knowhow</title>
-		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<meta charset="UTF-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<meta http-equiv="X-UA-Compatible" content="ie=edge">
 		<link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 		<link rel="stylesheet" href="/assets/css/style.css">
 		<link href="https://fonts.googleapis.com/css?family=Lato:100,200" rel="stylesheet">
