--- a/_generated/index.html
+++ b/_generated/index.html
@@ -24,11 +24,11 @@
 		<style type="text/css"></style>
 		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-135633048-1"></script>
 		<script>
-		  window.dataLayer = window.dataLayer || [];
-		  function gtag(){dataLayer.push(arguments);}
-		  gtag('js', new Date());
+			window.dataLayer = window.dataLayer || [];
+			function gtag(){dataLayer.push(arguments);}
+			gtag('js', new Date());
 
-		  gtag('config', 'UA-135633048-1');
+			gtag('config', 'UA-135633048-1');
 		</script>
 
 	</head>
@@ -95,7 +95,7 @@
 			<div class="banner__popup">
 				<button class="close-btn"><img src="assets/img/close-button.svg"></button>
 				<div class="popup__container">
-					<video id="popup-video" preload="auto" autoplay="true" muted="muted">
+					<video id="popup-video" preload="auto" autoplay="true" muted="muted" playsinline>
 						<source type="video/mp4" src="assets/img/popup.mp4"></source>
 					</video>
 				</div>
