--- a/_generated/index.html
+++ b/_generated/index.html
@@ -178,11 +178,15 @@
 				<div data-aos="fade-right" class="video-sect__container">
 					<div class="video-sect__hand">
 						<div class="img__phone">				
-							<div class="video-container"><video id="promovideo" controls="false" src="assets/img/promo.mp4"></video></div>
+							<div class="video-container"><video id="promovideo" controls= "false" src="assets/img/promo.mp4"></video></div>
 							<img src="assets/img/hand/phone.png" alt="phone">
+							<div class="play-btn"><img src="assets/img/play-button.svg" alt="play-btn"></div>
 						</div>
 						<div class="img__hand"></div>
 					</div>
+				</div>
+				<div class="video-sect__container-mob">
+					<video id="promovideo-mob" controls="false" src="assets/img/promo.mp4">
 				</div>
 				<div data-aos="fade-right" class="wrapper video-sect__logo">
 					<?xml version="1.0" encoding="UTF-8"?>
@@ -206,6 +210,7 @@
 					    </g>
 					</svg>
 				</div>
+			
 			</section>
 			<section class="project">
 				<div class="wrapper project__container">
