add icons fix pop up

--- a/_generated/index.html
+++ b/_generated/index.html
@@ -14,10 +14,10 @@
 		<meta http-equiv="X-UA-Compatible" content="ie=edge">
 		<meta name="msapplication-TileColor" content="#da532c">
 		<meta name="theme-color" content="#ffffff">
-		<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-		<link rel="icon" type="image/png" sizes="32x32" href="/icons/favicon-32x32.png">
-		<link rel="icon" type="image/png" sizes="16x16" href="/icons/favicon-16x16.png">
-		<link rel="manifest" href="/icons/site.webmanifest">
+		<link rel="apple-touch-icon" sizes="180x180" href="/assets/icons/apple-touch-icon.png">
+		<link rel="icon" type="image/png" sizes="32x32" href="/assets/icons/favicon-32x32.png">
+		<link rel="icon" type="image/png" sizes="16x16" href="/assets/icons/favicon-16x16.png">
+		<link rel="manifest" href="/assets/icons/site.webmanifest">
 		<link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 		<link rel="stylesheet" href="/assets/css/style.css">
 		<link href="https://fonts.googleapis.com/css?family=Lato:100,200" rel="stylesheet">
@@ -98,6 +98,7 @@
 					<video id="popup-video" preload="auto" autoplay="true" muted="muted" playsInline>
 						<source type="video/mp4" src="assets/img/popup.mp4"></source>
 					</video>
+					<video id="popup-video-mob" src="../assets/img/popup-mob.mp4" autoplay="true" muted="muted" playsInline></video>
 				</div>
 			</div>
 		
@@ -117,14 +118,15 @@
 			 	<div class="toform-btn__btn"><a href="#forms-block">хочу шедевр</a></div>
 			 	<p class="banner__mob-text">Когда-то давно Микеланджело
 					<br/>вооружился инструментами
-					<br/>и создал из глыбы мрамора 
-					<br/>произведение искусства — «Давида». 
-					<br/>Скульптор даже пренебрег логикой и 
+					<br/>и создал из глыбы мрамора
+					<br/>произведение искусства — «Давида».
+					<br/>Скульптор даже пренебрег логикой и
 					<br/>исказил пропорции человеческого тела,
 					<br/>чтобы достичь большей художественной
 					<br/>выразительности.</p>
 			 </div>
 		</section>
+
 		<section id="summary" class="summary">
 			<p class="summary__subtitle">Когда-то давно Микеланджело вооружился инструментами
 				<br>и создал из глыбы мрамора произведение искусства — «Давида». 
@@ -943,7 +945,7 @@
 				</div>
 			
 			</section>	</main>
-		
+
 		<script
   src="https://code.jquery.com/jquery-3.3.1.min.js"
   integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
