--- a/_generated/index.html
+++ b/_generated/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
-<html>
+<html prefix="og: http://ogp.me/ns#">
 
 	<head>
-		<title>knowhow</title>
+		<title>KnowHow Digital Agency</title>
 		<meta charset="UTF-8">
-		<meta name="description" content="" />
+		<meta name="description" content="Как минимум вторая твоя победа в жизни" />
 		<meta name="keywords" content="" />
-		<meta property="og:title" content="knowhow" />
-		<meta property="og:type" content="" />
-		<meta property="og:url" content="" />
+		<meta property="og:title" content="KnowHow Digital Agency" />
+		<meta property="og:type" content="web-site" />
+		<meta property="og:url" content="https://www.kh.agency" />
 		<meta property="og:image" content="" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -84,7 +84,7 @@
 						<ul class="links__list">
 							<li class="list__item"><a target="_blank" href="https://www.behance.net/">behance</a></li>
 							<li class="list__item"><a target="_blank" href="https://youtube.com">youtube</a></li>
-							<li class="list__item"><a target="_blank" href="https://instagram.com">instagram</a></li>
+							<li class="list__item"><a target="_blank" href="https://instagram.com/knowhow.agency/">instagram</a></li>
 							<li class="list__item"><a target="_blank" href="https://facebook.com">facebook</a></li>
 						</ul>
 					</div>
@@ -757,37 +757,31 @@
 									<ul class="block__list">
 										<li class="block-list__item md-checkbox">
 											<label class="pure-material-checkbox">
-												<input class="checkbox-item" data-price="20" type="checkbox">
-												<span> ФИРМЕННЫЙ СТИЛЬ</span>
-											</label>
-										</li>
-										<li class="block-list__item md-checkbox">
-											<label class="pure-material-checkbox">
-												<input class="checkbox-item" data-price="20" type="checkbox">
+												<input class="checkbox-item" data-price="80000" type="checkbox">
 												<span> ЛОГОТИП</span>
 											</label>
 										</li>
 										<li class="block-list__item md-checkbox">
 											<label class="pure-material-checkbox">
-												<input class="checkbox-item" data-price="20" type="checkbox">
-												<span> ДИЗАЙН</span>
-											</label>
-										</li>
-										<li class="block-list__item md-checkbox">
-											<label class="pure-material-checkbox">
-												<input class="checkbox-item" data-price="20" type="checkbox">
+												<input class="checkbox-item" data-price="120000" type="checkbox">
 												<span> БРЕНДБУК</span>
 											</label>
 										</li>
 										<li class="block-list__item md-checkbox">
 											<label class="pure-material-checkbox">
-												<input class="checkbox-item" data-price="20" type="checkbox">
+												<input class="checkbox-item" data-price="100000" type="checkbox">
+												<span> ГАЙДЛАЙН</span>
+											</label>
+										</li>
+										<li class="block-list__item md-checkbox">
+											<label class="pure-material-checkbox">
+												<input class="checkbox-item" data-price="50000" type="checkbox">
 												<span> НЕЙМИНГ</span>
 											</label>
 										</li>
 										<li class="block-list__item md-checkbox">
 											<label class="pure-material-checkbox">
-												<input class="checkbox-item" data-price="20" type="checkbox">
+												<input class="checkbox-item" data-price="500" type="checkbox">
 												<span> КОПИРАЙТИНГ</span>
 											</label>
 										</li>
@@ -799,25 +793,25 @@
 									<ul class="block__list">
 										<li class="block-list__item md-checkbox">
 											<label class="pure-material-checkbox">
-												<input class="checkbox-item" data-price="20" type="checkbox">
+												<input class="checkbox-item" data-price="50000" type="checkbox">
 												<span> ИНТЕГРАЦИИ</span>
 											</label>
 										</li>
 										<li class="block-list__item md-checkbox">
 											<label class="pure-material-checkbox">
-												<input class="checkbox-item" data-price="20" type="checkbox">
+												<input class="checkbox-item" data-price="20000" type="checkbox">
 												<span> ПРОМОРОЛИКИ</span>
 											</label>
 										</li>
 										<li class="block-list__item md-checkbox">
 											<label class="pure-material-checkbox">
-												<input class="checkbox-item" data-price="20" type="checkbox">
+												<input class="checkbox-item" data-price="200000" type="checkbox">
 												<span> ПОЛНОЦЕННЫЕ СЮЖЕТЫ</span>
 											</label>
 										</li>
 										<li class="block-list__item md-checkbox">
 											<label class="pure-material-checkbox">
-												<input class="checkbox-item" data-price="20" type="checkbox">
+												<input class="checkbox-item" data-price="320000" type="checkbox">
 												<span> КАНАЛ ПОД КЛЮЧ</span>
 											</label>
 										</li>
@@ -829,19 +823,19 @@
 									<ul class="block__list">
 										<li class="block-list__item md-checkbox">
 											<label class="pure-material-checkbox">
-												<input class="checkbox-item" data-price="20" type="checkbox">
+												<input class="checkbox-item" data-price="30000" type="checkbox">
 												<span> САЙТ</span>
 											</label>
 										</li>
 										<li class="block-list__item md-checkbox">
 											<label class="pure-material-checkbox">
-												<input class="checkbox-item" data-price="20" type="checkbox">
+												<input class="checkbox-item" data-price="300000" type="checkbox">
 												<span> ПРИЛОЖЕНИЕ</span>
 											</label>
 										</li>
 										<li class="block-list__item md-checkbox">
 											<label class="pure-material-checkbox">
-												<input class="checkbox-item" data-price="20" type="checkbox">
+												<input class="checkbox-item" data-price="150000" type="checkbox">
 												<span> CRM</span>
 											</label>
 										</li>
@@ -853,25 +847,25 @@
 									<ul class="block__list">
 										<li class="block-list__item md-checkbox">
 											<label class="pure-material-checkbox">
-												<input class="checkbox-item" data-price="20" type="checkbox">
+												<input class="checkbox-item" data-price="10000" type="checkbox">
 												<span> SMM-ПРОДВИЖЕНИЕ</span>
 											</label>
 										</li>
 										<li class="block-list__item md-checkbox">
 											<label class="pure-material-checkbox">
-												<input class="checkbox-item" data-price="20" type="checkbox">
+												<input class="checkbox-item" data-price="30000" type="checkbox">
 												<span> SEO-ПРОДВИЖЕНИЕ</span>
 											</label>
 										</li>
 										<li class="block-list__item md-checkbox">
 											<label class="pure-material-checkbox">
-												<input class="checkbox-item" data-price="20" type="checkbox">
+												<input class="checkbox-item" data-price="50000" type="checkbox">
 												<span> КОНТЕНТ-МАРКЕТИНГ</span>
 											</label>
 										</li>
 										<li class="block-list__item md-checkbox">
 											<label class="pure-material-checkbox">
-												<input class="checkbox-item" data-price="20" type="checkbox">
+												<input class="checkbox-item" data-price="30000" type="checkbox">
 												<span> КОНТЕКСТНАЯ РЕКЛАМА</span>
 											</label>
 										</li>
@@ -939,7 +933,7 @@
 					<div class="footer__item footer__links">
 						<a href="https://www.behance.net/" class="links__item --behance"></a>
 						<a href="https://youtube.com" class="links__item --youtube"></a>
-						<a href="https://instagram.com" class="links__item --instagram"></a>
+						<a href="https://instagram.com/knowhow.agency/" class="links__item --instagram"></a>
 						<a href="https://facebook.com" class="links__item --facebook"></a>
 					</div>
 				</div>
