--- a/_generated/index.html
+++ b/_generated/index.html
@@ -179,7 +179,7 @@
 			<section id="video" class="video-sect">
 				<div data-aos="fade-right" class="video-sect__container">
 					<div class="video-sect__hand">
-						<div class="img__phone">				
+						<div class="img__phone">
 							<div class="video-container"><video id="promovideo" src="assets/img/promo.mp4"></video></div>
 							<img src="assets/img/hand/phone.png" alt="phone">
 							<div class="play-btn"><img src="assets/img/play-button.svg" alt="play-btn"></div>
@@ -188,7 +188,7 @@
 					</div>
 				</div>
 				<div class="video-sect__container-mob">
-					<video id="promovideo-mob" src="assets/img/promo.mp4">
+					<video id="promovideo-mob" controls src="assets/img/promo.mp4">
 				</div>
 				<div data-aos="fade-right" class="wrapper video-sect__logo">
 					<?xml version="1.0" encoding="UTF-8"?>
@@ -214,6 +214,7 @@
 				</div>
 			
 			</section>
+
 			<section class="project">
 				<div class="wrapper project__container">
 					<div class="project__title">анатомия вашей компании</div>
