--- a/_generated/index.html
+++ b/_generated/index.html
@@ -212,7 +212,6 @@
 					    </g>
 					</svg>
 				</div>
-			
 			</section>
 
 			<section class="project">
@@ -876,13 +875,13 @@
 			
 			
 						</div>
-						
+			
 						<div class="forms__progressbar">
 							<div class="forms__subtitle progressbar__title">примерный бюджет</div>
 							<div class="progressbar wrapper">
 								<div class="progressfill"></div>
 							</div>
-							<p class="wrapper progressbar__amount">0$</p>
+							<p class="wrapper progressbar__amount">0&#8381;</p>
 						</div>
 			
 						<div class="forms__textarea">
@@ -898,6 +897,7 @@
 				</div>
 			
 			</section>
+
 
 			<section class="footer">
 				<div class="footer__container wrapper">
