--- a/_generated/index.html
+++ b/_generated/index.html
@@ -9,7 +9,7 @@
 		<meta property="og:title" content="KnowHow Digital Agency" />
 		<meta property="og:type" content="web-site" />
 		<meta property="og:url" content="https://www.kh.agency" />
-		<meta property="og:image" content="" />
+		<meta property="og:image" content="/remote/direct_uploads/1552653682_image.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta http-equiv="X-UA-Compatible" content="ie=edge">
 		<meta name="msapplication-TileColor" content="#da532c">
@@ -82,10 +82,10 @@
 							</svg>
 						</div>
 						<ul class="links__list">
-							<li class="list__item"><a target="_blank" href="https://www.behance.net/">behance</a></li>
-							<li class="list__item"><a target="_blank" href="https://youtube.com">youtube</a></li>
+							<li class="list__item"><a target="_blank" href="https://www.behance.net/knowhow_agency">behance</a></li>
+							<li class="list__item"><a target="_blank" href="https://www.youtube.com/channel/UCoiQ60XWelq-9zlJeT3r46Q">youtube</a></li>
 							<li class="list__item"><a target="_blank" href="https://instagram.com/knowhow.agency/">instagram</a></li>
-							<li class="list__item"><a target="_blank" href="https://facebook.com">facebook</a></li>
+							<li class="list__item"><a target="_blank" href="https://www.facebook.com/agency.knowhow">facebook</a></li>
 						</ul>
 					</div>
 				</div>
@@ -104,7 +104,12 @@
 		
 			 <div class="banner__wrapper wrapper">
 			 	<div class="banner__title">
-			 		<h1 class="--rubrica-title"><span class="--italic">ПЛЕВАТЬ<br/>НА ЛОГИКУ</span><br/>ШЕДЕВР<br/>СОЗДАЮТ<br/>ЭМОЦИИ <span class="switcher"><img src="assets/img/switcher.png" alt="switcher"></span></h1>
+			 		<h1 class="--rubrica-title">
+						<span class="--italic">ПЛЕВАТЬ<br/>НА ЛОГИКУ</span><br/>ШЕДЕВР<br/>СОЗДАЮТ<br/>ЭМОЦИИ
+						<span class="switcher">
+							<img src="assets/img/switcher.png" alt="switcher">
+						</span>
+					</h1>
 			 		<h4 class="--avente-subtitle-big">А ЭМОЦИИ СОЗДАЕМ <a href="#summary" class="--primary-color">МЫ</a></h4>
 			 	</div>
 			 	<div class="banner__head">
@@ -740,10 +745,10 @@
 			
 					<form action="" class="forms__inputs">
 						<div class="inputs">
-							<input class="inputs__input" placeholder="имя" type="text">
-							<input class="inputs__input" placeholder="E-mail" type="email">
-							<input id="phone" class="inputs__input" placeholder="номер телефона" type="tel">
-							<input class="inputs__input" placeholder="название компании" type="text">
+							<input id="user-name" class="inputs__input form-input" placeholder="имя" type="text">
+							<input id="user-email" class="inputs__input form-input" placeholder="E-mail" type="email">
+							<input id="phone" class="inputs__input form-input" placeholder="номер телефона" type="tel">
+							<input id="company-name" class="inputs__input form-input" placeholder="название компании" type="text">
 						</div>
 			
 						<div class="forms__checkboxes">
@@ -758,31 +763,31 @@
 										<li class="block-list__item md-checkbox">
 											<label class="pure-material-checkbox">
 												<input class="checkbox-item" data-price="80000" type="checkbox">
-												<span> ЛОГОТИП</span>
+												<span class="checkbox-label"> ЛОГОТИП</span>
 											</label>
 										</li>
 										<li class="block-list__item md-checkbox">
 											<label class="pure-material-checkbox">
 												<input class="checkbox-item" data-price="120000" type="checkbox">
-												<span> БРЕНДБУК</span>
+												<span class="checkbox-label"> БРЕНДБУК</span>
 											</label>
 										</li>
 										<li class="block-list__item md-checkbox">
 											<label class="pure-material-checkbox">
 												<input class="checkbox-item" data-price="100000" type="checkbox">
-												<span> ГАЙДЛАЙН</span>
+												<span class="checkbox-label"> ГАЙДЛАЙН</span>
 											</label>
 										</li>
 										<li class="block-list__item md-checkbox">
 											<label class="pure-material-checkbox">
 												<input class="checkbox-item" data-price="50000" type="checkbox">
-												<span> НЕЙМИНГ</span>
+												<span class="checkbox-label"> НЕЙМИНГ</span>
 											</label>
 										</li>
 										<li class="block-list__item md-checkbox">
 											<label class="pure-material-checkbox">
 												<input class="checkbox-item" data-price="500" type="checkbox">
-												<span> КОПИРАЙТИНГ</span>
+												<span class="checkbox-label"> КОПИРАЙТИНГ</span>
 											</label>
 										</li>
 									</ul>
@@ -794,25 +799,25 @@
 										<li class="block-list__item md-checkbox">
 											<label class="pure-material-checkbox">
 												<input class="checkbox-item" data-price="50000" type="checkbox">
-												<span> ИНТЕГРАЦИИ</span>
+												<span class="checkbox-label"> ИНТЕГРАЦИИ</span>
 											</label>
 										</li>
 										<li class="block-list__item md-checkbox">
 											<label class="pure-material-checkbox">
 												<input class="checkbox-item" data-price="20000" type="checkbox">
-												<span> ПРОМОРОЛИКИ</span>
+												<span class="checkbox-label"> ПРОМОРОЛИКИ</span>
 											</label>
 										</li>
 										<li class="block-list__item md-checkbox">
 											<label class="pure-material-checkbox">
 												<input class="checkbox-item" data-price="200000" type="checkbox">
-												<span> ПОЛНОЦЕННЫЕ СЮЖЕТЫ</span>
+												<span class="checkbox-label"> ПОЛНОЦЕННЫЕ СЮЖЕТЫ</span>
 											</label>
 										</li>
 										<li class="block-list__item md-checkbox">
 											<label class="pure-material-checkbox">
 												<input class="checkbox-item" data-price="320000" type="checkbox">
-												<span> КАНАЛ ПОД КЛЮЧ</span>
+												<span class="checkbox-label"> КАНАЛ ПОД КЛЮЧ</span>
 											</label>
 										</li>
 									</ul>
@@ -824,19 +829,19 @@
 										<li class="block-list__item md-checkbox">
 											<label class="pure-material-checkbox">
 												<input class="checkbox-item" data-price="30000" type="checkbox">
-												<span> САЙТ</span>
+												<span class="checkbox-label"> САЙТ</span>
 											</label>
 										</li>
 										<li class="block-list__item md-checkbox">
 											<label class="pure-material-checkbox">
 												<input class="checkbox-item" data-price="300000" type="checkbox">
-												<span> ПРИЛОЖЕНИЕ</span>
+												<span class="checkbox-label"> ПРИЛОЖЕНИЕ</span>
 											</label>
 										</li>
 										<li class="block-list__item md-checkbox">
 											<label class="pure-material-checkbox">
 												<input class="checkbox-item" data-price="150000" type="checkbox">
-												<span> CRM</span>
+												<span class="checkbox-label"> CRM</span>
 											</label>
 										</li>
 									</ul>
@@ -848,25 +853,25 @@
 										<li class="block-list__item md-checkbox">
 											<label class="pure-material-checkbox">
 												<input class="checkbox-item" data-price="10000" type="checkbox">
-												<span> SMM-ПРОДВИЖЕНИЕ</span>
+												<span class="checkbox-label"> SMM-ПРОДВИЖЕНИЕ</span>
 											</label>
 										</li>
 										<li class="block-list__item md-checkbox">
 											<label class="pure-material-checkbox">
 												<input class="checkbox-item" data-price="30000" type="checkbox">
-												<span> SEO-ПРОДВИЖЕНИЕ</span>
+												<span class="checkbox-label"> SEO-ПРОДВИЖЕНИЕ</span>
 											</label>
 										</li>
 										<li class="block-list__item md-checkbox">
 											<label class="pure-material-checkbox">
 												<input class="checkbox-item" data-price="50000" type="checkbox">
-												<span> КОНТЕНТ-МАРКЕТИНГ</span>
+												<span class="checkbox-label"> КОНТЕНТ-МАРКЕТИНГ</span>
 											</label>
 										</li>
 										<li class="block-list__item md-checkbox">
 											<label class="pure-material-checkbox">
 												<input class="checkbox-item" data-price="30000" type="checkbox">
-												<span> КОНТЕКСТНАЯ РЕКЛАМА</span>
+												<span class="checkbox-label"> КОНТЕКСТНАЯ РЕКЛАМА</span>
 											</label>
 										</li>
 									</ul>
@@ -881,12 +886,12 @@
 							<div class="progressbar wrapper">
 								<div class="progressfill"></div>
 							</div>
-							<p class="wrapper progressbar__amount">0&#8381;</p>
+							<p class="wrapper progressbar__amount">от <span class="progressbar__totalamount">0</span>&#8381;</p>
 						</div>
 			
 						<div class="forms__textarea">
 							<div class="forms__subtitle textarea__title">опишите проект</div>
-							<p><textarea name="text"></textarea></p>
+							<p><textarea class="form-input" id="description" name="text"></textarea></p>
 						</div>
 			
 						<div class="submit">
@@ -902,7 +907,8 @@
 			<section class="footer">
 				<div class="footer__container wrapper">
 					<div class="footer__item footer__mail">
-						<a href="mailto:hello@kh.agency" class="mail-link">hello@kh.agency</a>
+						<div><a href="mailto:hello@kh.agency" class="mail-link">hello@kh.agency</a></div>
+						<div><a href="tel:+7 918 99 77 000" class="mail-link">+7 918 99 77 000</a></div>
 					</div>
 					<div class="footer__item footer__logo"><a href="">
 						<svg width="126px" height="53px" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 528.99 222.14">
@@ -932,14 +938,15 @@
 						</svg>
 					</a></div>
 					<div class="footer__item footer__links">
-						<a href="https://www.behance.net/" class="links__item --behance"></a>
-						<a href="https://youtube.com" class="links__item --youtube"></a>
+						<a href="https://www.behance.net/knowhow_agency" class="links__item --behance"></a>
+						<a href="https://www.youtube.com/channel/UCoiQ60XWelq-9zlJeT3r46Q" class="links__item --youtube"></a>
 						<a href="https://instagram.com/knowhow.agency/" class="links__item --instagram"></a>
-						<a href="https://facebook.com" class="links__item --facebook"></a>
+						<a href="https://www.facebook.com/agency.knowhow" class="links__item --facebook"></a>
 					</div>
 				</div>
 			
-			</section>	</main>
+			</section>
+	</main>
 
 		<script
   src="https://code.jquery.com/jquery-3.3.1.min.js"
