--- a/_generated/index.html
+++ b/_generated/index.html
@@ -199,7 +199,14 @@
 					</div>
 				</div>
 				<div class="video-sect__container-mob">
-					<iframe class="yt-video-mob" src="https://www.youtube.com/embed/k9SKe2iYdNU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+					<!-- <iframe class="yt-video-mob" src="https://www.youtube.com/embed/k9SKe2iYdNU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> -->
+			
+					<a class="link-to-video" target="_blank" href="https://youtu.be/k9SKe2iYdNU">
+						<?xml version="1.0"?>
+						<svg class="play-btn" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Capa_1" x="0px" y="0px" viewBox="0 0 60 60" style="enable-background:new 0 0 60 60;" xml:space="preserve" width="512px" height="512px" class="">
+								<path d="M30,0C13.458,0,0,13.458,0,30s13.458,30,30,30s30-13.458,30-30S46.542,0,30,0z M45.563,30.826l-22,15  C23.394,45.941,23.197,46,23,46c-0.16,0-0.321-0.038-0.467-0.116C22.205,45.711,22,45.371,22,45V15c0-0.371,0.205-0.711,0.533-0.884  c0.328-0.174,0.724-0.15,1.031,0.058l22,15C45.836,29.36,46,29.669,46,30S45.836,30.64,45.563,30.826z"/>
+						</svg>
+					</a>
 				</div>
 				<div data-aos="fade-right" class="wrapper video-sect__logo">
 					<?xml version="1.0" encoding="UTF-8"?>
@@ -944,10 +951,10 @@
 						</svg>
 					</a></div>
 					<div class="footer__item footer__links">
-						<a href="https://www.behance.net/knowhow_agency" class="links__item --behance"></a>
-						<a href="https://www.youtube.com/channel/UCoiQ60XWelq-9zlJeT3r46Q" class="links__item --youtube"></a>
-						<a href="https://instagram.com/knowhow.agency/" class="links__item --instagram"></a>
-						<a href="https://www.facebook.com/agency.knowhow" class="links__item --facebook"></a>
+						<a target="_blank" href="https://www.behance.net/knowhow_agency" class="links__item --behance"></a>
+						<a target="_blank" href="https://www.youtube.com/channel/UCoiQ60XWelq-9zlJeT3r46Q" class="links__item --youtube"></a>
+						<a target="_blank" href="https://instagram.com/knowhow.agency/" class="links__item --instagram"></a>
+						<a target="_blank" href="https://www.facebook.com/agency.knowhow" class="links__item --facebook"></a>
 					</div>
 				</div>
 			
