--- a/_generated/index.html
+++ b/_generated/index.html
@@ -6,6 +6,7 @@
 		<meta charset="UTF-8">
 		<meta name="description" content="Как минимум вторая твоя победа в жизни" />
 		<meta name="keywords" content="" />
+		<meta name="mailru-verification" content="c2a86d8ea173480f" />
 		<meta property="og:title" content="KnowHow Digital Agency" />
 		<meta property="og:type" content="web-site" />
 		<meta property="og:url" content="https://www.kh.agency" />
