--- a/_generated/index.html
+++ b/_generated/index.html
@@ -4,7 +4,7 @@
 	<head>
 		<title>KnowHow Digital Agency</title>
 		<meta charset="UTF-8">
-		<meta name="description" content="Как минимум вторая твоя победа в жизни" />
+		<meta name="description" content="Диджитал-агентство. Создаем шедевры для вашего бизнеса: брендинг, продакшн, IT, маркетинг." />
 		<meta name="keywords" content="digital agency" />
 		<meta name="mailru-verification" content="c2a86d8ea173480f" />
 		<meta property="og:title" content="KnowHow Digital Agency" />
