fix eng form subtitle

--- a/_generated/index.html
+++ b/_generated/index.html
@@ -588,7 +588,7 @@
 			
 						<div class="forms__checkboxes">
 			
-							<div class="checkboxes__title forms__subtitle">отметьте необходимое</div>
+							<div class="checkboxes__title forms__subtitle">Отметьте необходимое</div>
 			
 							<div class="checkboxes__blocks">
 								<div class="checkboxes__block">
